# agent-audit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  self-audit.yml
agent_audit/: __init__.py  cli.py  engine.py  model.py  report.py
agent_audit/domains/: __init__.py  d1_architecture.py  d2_tools.py  d3_memory.py  d4_evaluation.py  d5_multiagent.py  d6_guardrails.py
checklists/: gh600_domains.md
examples/: sample_report.md  self-audit.md
tests/: test_cli.py  test_domains.py  test_engine.py  test_report.py
